--- a/content/pages/rules/source/158/index.adoc
+++ b/content/pages/rules/source/158/index.adoc
@@ -1,10 +1,10 @@
 :slug: rules/158/
 :category: source
-:description: This document contains the details of the security requirements related to the definition and management of system source code. This requirement establishes the importance of implementing applications in a secure programming language, properly updated and free of known vulnerabilities.
-:keywords: Requirement, Security, Source Code, Updates, Vulnerabilities, Programming
+:description: This requirement establishes the importance of implementing applications in a secure programming language, properly updated and free of known vulnerabilities.
+:keywords: Security, Source Code, Updates, Vulnerabilities, Programming, ASVS
 :rules: yes
 
-= R158. Define secure programming language
+= R158. Use a secure programming language
 
 == Requirement
 
@@ -23,7 +23,11 @@ version of the chosen programming language.
 . [[r1]] link:https://www.owasp.org/index.php/ASVS_V1_Architecture[OWASP-ASVS v3.1-1.9]
 A mechanism for enforcing updates of the application exists.
 
-
 . [[r2]] link:https://www.owasp.org/index.php/ASVS_V1_Architecture[OWASP-ASVS v3.1-1.11]
 All application components, libraries, modules, frameworks, platform,
 and operating systems are free from known vulnerabilities.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.4 Memory, String, and Unmanaged Code Requirements.(5.4.1)]
+Verify that the application uses memory-safe string, safer memory copy and
+pointer arithmetic to detect or prevent stack, buffer, or heap overflows.
