refac(cross): #3423.3 fix-keywords
- The keywords Ethical Hacking and Pentesting were added to some pages.


Former-commit-id: 655a81f8c4ca5d82fb7e630edeaf1400946a46d1

--- a/content/pages/careers/faq/section1.adoc
+++ b/content/pages/careers/faq/section1.adoc
@@ -1,7 +1,7 @@
 :slug: careers/faq/before/
 :category: before-entering
 :description: Here we present a Frequently Asked Questions (FAQ) section, which intends to guide our candidates through Fluid Attacks' selection process.
-:keywords: Fluid Attacks, Careers, Selection, Process, FAQ, Questions, Candidates
+:keywords: Fluid Attacks, Careers, Selection, Process, FAQ, Questions, Candidates, Pentesting, Ethical Hacking
 :faq: yes
 
 = Before Entering
