--- a/content/pages/events/breaking-the-build/index.adoc
+++ b/content/pages/events/breaking-the-build/index.adoc
@@ -2,7 +2,7 @@
 :subtitle: Our SecDevOps Habits
 :category: events
 :description: The conference Breaking the Build presents Fluid Attacks' SecDevOps habits that allow us to keep improving every day, and how to implement them in your company.
-:keywords: Fluid Attacks, SecDevOps, Habits, Breaking the Build, Conference
+:keywords: Fluid Attacks, SecDevOps, Habits, Breaking the Build, Conference, Pentesting, Ethical Hacking
 :eventspage: yes
 
 = Breaking the Build
