--- a/content/pages/events/burn-the-datacenter/index.adoc
+++ b/content/pages/events/burn-the-datacenter/index.adoc
@@ -2,7 +2,7 @@
 :subtitle: From pets to cattle
 :category: events
 :description: Future of technologies, software development, security testing and management of development lifecycle in one talk. Find out more about it here.
-:keywords: Fluid Attacks, Burn the Datacenter, Technology, Security Testing, Software Development, Development Lifecycle
+:keywords: Fluid Attacks, Burn the Datacenter, Technology, Security Testing, Software Development, Development Lifecycle, Pentesting, Ethical Hacking
 :eventspage: yes
 
 = Burn the Datacenter
