--- a/content/pages/events/securing-device/index.adoc
+++ b/content/pages/events/securing-device/index.adoc
@@ -1,7 +1,7 @@
 :slug: events/securing-device/
 :category: events
 :description: Let's talk about the risks that smartphone users are constantly exposed to and unaware of, as well as what to do to mitigate them.
-:keywords: Fluid Attacks, Talks, Mobile Device, Events, Security, Smartphone
+:keywords: Fluid Attacks, Talks, Mobile Device, Events, Security, Smartphone, Pentesting, Ethical Hacking
 :eventspage: yes
 
 = Securing your Mobile Device
