--- a/content/pages/security/index.adoc
+++ b/content/pages/security/index.adoc
@@ -1,6 +1,6 @@
 :slug: security/
 :description: These are the best practices and technology implemented by Fluid Attacks to keep internal products and customer data secure.
-:keywords: Fluid Attacks, Security, Data, Policy, Breach, Best Practices
+:keywords: Fluid Attacks, Security, Data, Policy, Breach, Best Practices, Pentesting, Ethical Hacking
 :subtitle: How we keep things secure
 
 = Security
