--- a/content/pages/values/index.adoc
+++ b/content/pages/values/index.adoc
@@ -1,7 +1,7 @@
 :slug: values/
 :category: about-us
 :description: Fluid Attacks is committed to always having integral and correct behavior, and expects all members to act in accordance with the law and company's policies.
-:keywords: Fluid Attacks, Values, Policies, Ethics, Protection, Information, Company Policies
+:keywords: Fluid Attacks, Values, Policies, Ethics, Protection, Information, Company Policies, Pentesting, Ethical Hacking
 
 = Values
 
