--- a/new/content/pages/asserts/index.adoc
+++ b/new/content/pages/asserts/index.adoc
@@ -1,6 +1,6 @@
 :slug: asserts/
 :description: Fluid Attacks presents Asserts, an open-source tool that looks for deterministic and peripheral vulnerabilities verifying their status by automated attacks.
-:keywords: Fluid Attacks, Resources, Asserts, Security, Vulnerabilities, Automated Attacks
+:keywords: Fluid Attacks, Resources, Asserts, Security, Vulnerabilities, Automated Attacks, Pentesting, Ethical Hacking
 :assertsindex: yes
 
 = Asserts
