--- a/new/content/pages/contact-us/index.adoc
+++ b/new/content/pages/contact-us/index.adoc
@@ -1,6 +1,6 @@
 :slug: contact-us/
 :description: Contact Fluid Attacks' team and solve now all the vulnerabilities in your company's software!
-:keywords: Fluid Attacks, Contact Us, Information, Company, About Us, Security, Experts
+:keywords: Fluid Attacks, Contact Us, Information, Company, About Us, Security, Experts, Pentesting, Ethical Hacking
 :template: contact-us
 
 = Talk to our experts
