--- a/new/content/pages/faq/index.adoc
+++ b/new/content/pages/faq/index.adoc
@@ -1,6 +1,6 @@
 :slug: faq/
 :description: Here we present a Frequently Asked Questions (FAQ) section to give you a guide on our products, services, and selection process.
-:keywords: Fluid Attacks, Careers, Selection, Process, FAQ, Questions, Services, Products
+:keywords: Fluid Attacks, Careers, Selection, Process, FAQ, Questions, Services, Products, Pentesting, Ethical Hacking
 
 = Frequently Asked Questions (FAQ)
 
