--- a/content/pages/careers/terms/index.adoc
+++ b/content/pages/careers/terms/index.adoc
@@ -1,7 +1,7 @@
 :slug: careers/terms/
 :category: careers
 :description: Learn here the general terms and processes to join Fluid Attacks' team.
-:keywords: Fluid Attacks, Careers, Process, Selection, Terms, Company, Job, Terms and Conditions
+:keywords: Fluid Attacks, Careers, Process, Selection, Terms, Company, Job, Terms and Conditions, Pentesting, Ethical Hacking
 
 = Careers Terms
 
