--- a/content/pages/partners/index.adoc
+++ b/content/pages/partners/index.adoc
@@ -1,7 +1,7 @@
 :slug: partners/
 :category: about-us
 :description: Our partners allow us to complete our portfolio and offer better security testing services. Get to know them and become one of them.
-:keywords: Fluid Attacks, Partners, Services, Security Testing, Software Development
+:keywords: Fluid Attacks, Partners, Services, Security Testing, Software Development, Pentesting, Ethical Hacking
 :germany: image:../images/icons/germany-flag.png[Germany Flag]
 :usa: image:../images/icons/us-flag.png[USA Flag]
 :australia: image:../images/icons/australia-flag.png[Australia Flag]
