--- a/content/pages/partners/terms/index.adoc
+++ b/content/pages/partners/terms/index.adoc
@@ -1,7 +1,7 @@
 :slug: partners/terms/
 :category: partners
 :description: If you're interested in becoming one of Fluid Attacks Partners, find here the terms of our general partner agreement.
-:keywords: Fluid Attacks, Partners, Pentesting, Terms, Agreement, Information Security, Securtiy Testing, Partners Terms
+:keywords: Fluid Attacks, Partners, Pentesting, Terms, Agreement, Information Security, Security Testing, Partners Terms, Ethical Hacking
 :partnerspage: yes
 
 = Partners Terms
