--- a/content/pages/reviews/index.adoc
+++ b/content/pages/reviews/index.adoc
@@ -1,7 +1,7 @@
 :slug: reviews/
 :category: about-us
 :description: Fluid Attacks has recently been recognized by Clutch as one of the Top Cybersecurity Consulting Companies in the world.
-:keywords: Fluid Attacks, Reviews, Clutch, Services, Products, Recognition, Clutch Recognition
+:keywords: Fluid Attacks, Reviews, Clutch, Services, Products, Recognition, Clutch Recognition, Pentesting, Ethical Hacking
 
 = Reviews
 
