--- a/content/pages/services/continuous-hacking/index.adoc
+++ b/content/pages/services/continuous-hacking/index.adoc
@@ -1,7 +1,7 @@
 :slug: services/continuous-hacking/
 :category: services
 :description: Our Continuous Hacking detects and reports all the vulnerabilities and security issues during the whole software development life cycle.
-:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Security, Software Development Life Cycle
+:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Security, Software Development Life Cycle, Pentesting
 :template: salesforce
 
 = Continuous Hacking
