--- a/content/pages/services/faq/index.adoc
+++ b/content/pages/services/faq/index.adoc
@@ -1,7 +1,7 @@
 :slug: services/faq/
 :category: services
 :description: Here we present a compilation of questions and answers to help our clients understand Fluid Attacks' services and how it can benefit your organization.
-:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, FAQ, Questions, Answers
+:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, FAQ, Questions, Answers, Pentesting
 
 = Frequently asked questions
 
