--- a/new/content/pages/resources/index.adoc
+++ b/new/content/pages/resources/index.adoc
@@ -1,6 +1,6 @@
 :slug: resources/
 :description: Here are Fluid Attacks' Resources. These are documents like annual reports, ebooks, webinars, and other content that can help you learn about cybersecurity.
-:keywords: Fluid Attacks, Resources, Documentation, Security, Information, Annual Reports, Rules, Asserts
+:keywords: Fluid Attacks, Resources, Documentation, Security, Information, Annual Reports, Rules, Asserts, Pentesting, Ethical Hacking
 
 = Resources
 
