--- a/new/content/pages/use-cases/one-shot-hacking/index.adoc
+++ b/new/content/pages/use-cases/one-shot-hacking/index.adoc
@@ -1,6 +1,6 @@
 :slug: use-cases/one-shot-hacking/
 :description: Our One-Shot Hacking service reports security vulnerabilities in specific versions of your applications.
-:keywords: Fluid Attacks, Services, Ethical Hacking, Security, Application, Vulnerabilities, One-Shot Hacking
+:keywords: Fluid Attacks, Services, Ethical Hacking, Security, Application, Vulnerabilities, One-Shot Hacking, Pentesting
 :template: use-cases/one-shot
 
 = One-Shot Hacking
